force-app/main/default/objects/Merge__c/Merge__c.object-meta.xml
<CustomObject>
    <label>Merge</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Merge Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>