force-app/main/default/objects/Merge__c/fields/New_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Name__c</fullName>
    <label>New Name</label>
    <type>TextArea</type>
</CustomField>