force-app/main/default/objects/Merge__c/fields/New_Reference__c.field-meta.xml
<CustomField>
    <fullName>New_Reference__c</fullName>
    <label>New Reference</label>
    <type>TextArea</type>
</CustomField>