force-app/main/default/objects/Merge__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Imerys Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>