force-app/main/default/objects/Merge__c/fields/Old_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Name__c</fullName>
    <label>Old Name</label>
    <type>TextArea</type>
</CustomField>