force-app/main/default/objects/Merge__c/fields/Old_Reference__c.field-meta.xml
<CustomField>
    <fullName>Old_Reference__c</fullName>
    <label>Old - Reference</label>
    <type>TextArea</type>
</CustomField>